--- a/Index.html
+++ b/Index.html
@@ -92,9 +92,9 @@
                         <h4 class="title-text text-uppercase">Junior Programmer</h4>
                         <div class="site-buttons">
                             <div class="d-flex flex-row flex-wrap">
-                                <button type="button" class="btn button primary-button mr-4 text-uppercase">hire
-                                    me</button>
-                                <button type="button" class="btn button secondary-button text-uppercase">Get cv</button>
+                                <a href="https://www.linkedin.com/in/achmad-tsany-9b62571a6/"><button type="button" class="btn button primary-button mr-4 text-uppercase">hire
+                                    me</button></a>
+                                <a href="./img/cv.jpeg"><button type="button" class="btn button secondary-button text-uppercase">Get cv</button></a>
                             </div>
                         </div>
                     </div>
@@ -130,7 +130,7 @@
                                 I hope one day  i can become a great Full Stack Web Developer and Android Developer
                             </p>
                         </div>
-                        <button type="button" class="btn button primary-button text-uppercase">Download cv</button>
+                        <a href="./img/cv.jpeg"><button type="button" class="btn button primary-button text-uppercase">Download cv</button></a>
                     </div>
                 </div>
             </div>
@@ -239,11 +239,9 @@
                                     <img src="./img/services/s1.png" alt="Services-1">
                                 </div>
                                 <div class="card-body text-center">
-                                    <h5 class="card-title text-uppercase font-roboto">Wp developer</h5>
+                                    <h5 class="card-title text-uppercase font-roboto">Web developer</h5>
                                     <p class="card-text text-secondary">
-                                        Some quick example text to build on the card
-                                        title and make up
-                                        the bulk of the card's content.
+                                        serve the creation of websites for both personal and business purposes with various types of programming languages
                                     </p>
                                 </div>
                             </div>
@@ -254,11 +252,9 @@
                                     <img src="./img/services/s2.png" alt="Services-2">
                                 </div>
                                 <div class="card-body text-center">
-                                    <h5 class="card-title text-uppercase font-roboto">ux/ui desing</h5>
+                                    <h5 class="card-title text-uppercase font-roboto">ux/ui design</h5>
                                     <p class="card-text text-secondary">
-                                        Some quick example text to build on the card
-                                        title and make up
-                                        the bulk of the card's content.
+                                        serve in the manufacture of design, layout and others
                                     </p>
                                 </div>
                             </div>
@@ -269,11 +265,9 @@
                                     <img src="./img/services/s3.png" alt="Services-3">
                                 </div>
                                 <div class="card-body text-center">
-                                    <h5 class="card-title text-uppercase font-roboto">web design</h5>
+                                    <h5 class="card-title text-uppercase font-roboto"> Design</h5>
                                     <p class="card-text text-secondary">
-                                        Some quick example text to build on the card
-                                        title and make up
-                                        the bulk of the card's content.
+                                        Serving making logos, banners, business cards and others
                                     </p>
                                 </div>
                             </div>
@@ -321,12 +315,12 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 element-item latest">
                         <div class="our-project">
                             <div class="img">
-                                <a class="test-popup-link" href="./img/portfolio/p1.jpg">
-                                    <img src="./img/portfolio/p1.jpg" alt="portfolio-1" class="img-fluid">
+                                <a class="test-popup-link" href="./img/portfolio/Paperless.png">
+                                    <img src="./img/portfolio/Paperless.png" alt="portfolio-1" class="img-fluid">
                                 </a>
                             </div>
                             <div class="title py-4">
-                                <h4 class="text-uppercase">Minimul Desing</h4>
+                                <h4 class="text-uppercase">SIPAS</h4>
                                 <span class="text-secondary">Latest, Portfolio</span>
                             </div>
                         </div>
@@ -334,12 +328,12 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 element-item popular">
                         <div class="our-project">
                             <div class="img">
-                                <a class="test-popup-link" href="./img/portfolio/p2.jpg">
-                                    <img src="./img/portfolio/p2.jpg" alt="portfolio-2" class="img-fluid">
+                                <a class="test-popup-link" href="./img/portfolio/Project Carrental.png">
+                                    <img src="./img/portfolio/Project Carrental.png" alt="portfolio-2" class="img-fluid">
                                 </a>
                             </div>
                             <div class="title py-4">
-                                <h4 class="text-uppercase">Paint Wall</h4>
+                                <h4 class="text-uppercase">Web Penyewaan Mobil</h4>
                                 <span class="text-secondary">Popular, Portfolio</span>
                             </div>
                         </div>
@@ -347,12 +341,12 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 element-item popular">
                         <div class="our-project">
                             <div class="img">
-                                <a class="test-popup-link" href="./img/portfolio/p3.jpg">
-                                    <img src="./img/portfolio/p3.jpg" alt="portfolio-3" class="img-fluid">
+                                <a class="test-popup-link" href="./img/portfolio/Project SILAB.png">
+                                    <img src="./img/portfolio/Project SILAB.png" alt="portfolio-3" class="img-fluid">
                                 </a>
                             </div>
                             <div class="title py-4">
-                                <h4 class="text-uppercase">Female light</h4>
+                                <h4 class="text-uppercase">SILAB</h4>
                                 <span class="text-secondary">Popular, Portfolio</span>
                             </div>
                         </div>
@@ -360,12 +354,12 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 element-item upcoming">
                         <div class="our-project">
                             <div class="img">
-                                <a class="test-popup-link" href="./img/portfolio/p4.jpg">
-                                    <img src="./img/portfolio/p4.jpg" alt="portfolio-4" class="img-fluid">
+                                <a class="test-popup-link" href="./img/portfolio/Project RnmusicPlayer.png">
+                                    <img src="./img/portfolio/Project RnmusicPlayer.png" alt="portfolio-4" class="img-fluid">
                                 </a>
                             </div>
                             <div class="title py-4">
-                                <h4 class="text-uppercase">Fourth Air</h4>
+                                <h4 class="text-uppercase">Rn Music Player</h4>
                                 <span class="text-secondary">Upcoming, Portfolio</span>
                             </div>
                         </div>
@@ -373,12 +367,12 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 element-item upcoming">
                         <div class="our-project">
                             <div class="img">
-                                <a class="test-popup-link" href="./img/portfolio/p5.jpg">
-                                    <img src="./img/portfolio/p5.jpg" alt="portfolio-5" class="img-fluid">
+                                <a class="test-popup-link" href="./img/portfolio/Project Youtube Clone.png">
+                                    <img src="./img/portfolio/Project Youtube Clone.png" alt="portfolio-5" class="img-fluid">
                                 </a>
                             </div>
                             <div class="title py-4">
-                                <h4 class="text-uppercase">Muliple fown</h4>
+                                <h4 class="text-uppercase">Youtube Clone</h4>
                                 <span class="text-secondary">Upcoming, Portfolio</span>
                             </div>
                         </div>
@@ -386,12 +380,12 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 element-item following">
                         <div class="our-project">
                             <div class="img">
-                                <a class="test-popup-link" href="./img/portfolio/p6.jpg">
-                                    <img src="./img/portfolio/p6.jpg" alt="portfolio-6" class="img-fluid">
+                                <a class="test-popup-link" href="./img/portfolio/SIECKHOTEL.png">
+                                    <img src="./img/portfolio/SIECKHOTEL.png" alt="portfolio-6" class="img-fluid">
                                 </a>
                             </div>
                             <div class="title py-4">
-                                <h4 class="text-uppercase">Together sign</h4>
+                                <h4 class="text-uppercase">Hotel Management</h4>
                                 <span class="text-secondary">Following, Portfolio</span>
                             </div>
                         </div>
@@ -399,12 +393,12 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 element-item following">
                         <div class="our-project">
                             <div class="img">
-                                <a class="test-popup-link" href="./img/portfolio/p7.jpg">
-                                    <img src="./img/portfolio/p7.jpg" alt="portfolio-7" class="img-fluid">
+                                <a class="test-popup-link" href="./img/portfolio/SIKARYAWAN.png">
+                                    <img src="./img/portfolio/SIKARYAWAN.png" alt="portfolio-7" class="img-fluid">
                                 </a>
                             </div>
                             <div class="title py-4">
-                                <h4 class="text-uppercase">Green Heaven</h4>
+                                <h4 class="text-uppercase">SIKARYAWAN</h4>
                                 <span class="text-secondary">Following, Portfolio</span>
                             </div>
                         </div>
@@ -412,12 +406,12 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 element-item following">
                         <div class="our-project">
                             <div class="img">
-                                <a class="test-popup-link" href="./img/portfolio/p8.jpg">
-                                    <img src="./img/portfolio/p8.jpg" alt="portfolio-8" class="img-fluid">
+                                <a class="test-popup-link" href="./img/portfolio/Warehouse.png">
+                                    <img src="./img/portfolio/Warehouse.png" alt="portfolio-8" class="img-fluid">
                                 </a>
                             </div>
                             <div class="title py-4">
-                                <h4 class="text-uppercase">Fly Male</h4>
+                                <h4 class="text-uppercase">Warehouse</h4>
                                 <span class="text-secondary">Following, Portfolio</span>
                             </div>
                         </div>
@@ -425,12 +419,12 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 element-item upcoming">
                         <div class="our-project">
                             <div class="img">
-                                <a class="test-popup-link" href="./img/portfolio/p9.jpg">
-                                    <img src="./img/portfolio/p9.jpg" alt="portfolio-9" class="img-fluid">
+                                <a class="test-popup-link" href="./img/portfolio/Travel.png">
+                                    <img src="./img/portfolio/Travel.png" alt="portfolio-9" class="img-fluid">
                                 </a>
                             </div>
                             <div class="title py-4">
-                                <h4 class="text-uppercase">Camera Lens</h4>
+                                <h4 class="text-uppercase">Web Travel</h4>
                                 <span class="text-secondary">Upcoming, Portfolio</span>
                             </div>
                         </div>
@@ -450,8 +444,7 @@
                         <div class="about-title">
                             <h1 class="text-uppercase title-h1">Client Say about me</h1>
                             <p class="para">
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus, deleniti
-                                recusandae. Esse incidunt rem repellendus ab voluptates maxime? Nemo, numquam!
+                                testimonials
                             </p>
                         </div>
                     </div>
@@ -466,8 +459,7 @@
                         </div>
                         <div class="col-lg-8 col-md-12 about-client">
                             <h4 class="text-uppercase">John Martin</h4>
-                            <p class="para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem architecto
-                                consequuntur ratione, obcaecati corrupti deserunt.</p>
+                            <p class="para">He really likes learning new technology</p>
                         </div>
                     </div>
                     <div class="client row">
@@ -476,8 +468,7 @@
                         </div>
                         <div class="col-lg-8 col-md-12 about-client">
                             <h4 class="text-uppercase">Mac Hill</h4>
-                            <p class="para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem architecto
-                                consequuntur ratione, obcaecati corrupti deserunt.</p>
+                            <p class="para">He does it quickly and accurately</p>
                         </div>
                     </div>
                     <div class="client row">
@@ -486,8 +477,7 @@
                         </div>
                         <div class="col-lg-8 col-md-12 about-client">
                             <h4 class="text-uppercase">John Martin</h4>
-                            <p class="para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem architecto
-                                consequuntur ratione, obcaecati corrupti deserunt.</p>
+                            <p class="para">He really likes learning new technology</p>
                         </div>
                     </div>
                     <div class="client row">
@@ -496,8 +486,7 @@
                         </div>
                         <div class="col-lg-8 col-md-12 about-client">
                             <h4 class="text-uppercase">Mac Hill</h4>
-                            <p class="para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem architecto
-                                consequuntur ratione, obcaecati corrupti deserunt.</p>
+                            <p class="para">He does it quickly and accurately</p>
                         </div>
                     </div>
                     <div class="client row">
@@ -506,8 +495,8 @@
                         </div>
                         <div class="col-lg-8 col-md-12 about-client">
                             <h4 class="text-uppercase">John Martin</h4>
-                            <p class="para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem architecto
-                                consequuntur ratione, obcaecati corrupti deserunt.</p>
+                            <p class="para">He really likes learning new technology</p>
+
                         </div>
                     </div>
                     <div class="client row">
@@ -516,8 +505,8 @@
                         </div>
                         <div class="col-lg-8 col-md-12 about-client">
                             <h4 class="text-uppercase">Mac Hill</h4>
-                            <p class="para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem architecto
-                                consequuntur ratione, obcaecati corrupti deserunt.</p>
+                            <p class="para">He does it quickly and accurately</p>
+
                         </div>
                     </div>
                 </div>
@@ -533,8 +522,7 @@
                 <div class="row">
                     <div class="col-lg-12 text-center subscribe-title">
                         <h4 class="text-uppercase">Get Update From anywhere</h4>
-                        <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam,
-                            consequuntur.</p>
+                        <p class="para">Just Send your email in below</p>
                     </div>
                 </div>
                 <div class="d-sm-flex justify-content-center">
